# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//lynx/core/Lynx.gni")
import("style.gni")

lynx_core_source_set("style") {
  sources = style_shared_sources
  deps = [ "//lynx/base/src:base_log_headers" ]
}
