style_shared_sources = rebase_path([
                                     "animation_data.cc",
                                     "animation_data.h",
                                     "background_data.cc",
                                     "background_data.h",
                                     "color.h",
                                     "content_data.h",
                                     "default_computed_style.h",
                                     "filter_data.cc",
                                     "filter_data.h",
                                     "layout_animation_data.cc",
                                     "layout_animation_data.h",
                                     "outline_data.cc",
                                     "outline_data.h",
                                     "perspective_data.cc",
                                     "perspective_data.h",
                                     "shadow_data.cc",
                                     "shadow_data.h",
                                     "text_attributes.cc",
                                     "text_attributes.h",
                                     "timing_function_data.cc",
                                     "timing_function_data.h",
                                     "transform_origin_data.cc",
                                     "transform_origin_data.h",
                                     "transform_raw_data.cc",
                                     "transform_raw_data.h",
                                     "transition_data.cc",
                                     "transition_data.h",
                                   ])
