# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//lynx/core/Lynx.gni")

# constant_share_sources

lynx_core_source_set("template_bundle") {
  sources = [ "lynx_template_bundle.h" ]

  public_deps =
      [ "//lynx/core/template_bundle/template_codec:template_decoder" ]
}
