# Copyright 2022 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//lynx/core/Lynx.gni")

lynx_core_source_set("memory_tracer_src") {
  sources = [
    "memory_tracer.cc",
    "memory_tracer.h",
    "memory_tracer_android.cc",
    "memory_tracer_android.h",
  ]
  deps = [ "//third_party/xhook:xhook" ]
}
