# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//lynx/core/Lynx.gni")
import("//lynx/core/renderer/data/build.gni")
import("//lynx/testing/test.gni")

lynx_core_source_set("data") {
  sources = lynx_data_shared_sources_path
  if (!is_oliver_ssr) {
    sources += lynx_data_platform_sources_path
  }
  deps = [
    "//lynx/base/src:base_log_headers",
    "//lynx/third_party/rapidjson:rapidjson",
  ]
}
